# pychat

./: .gitignore  README.md  chat_app.py  chat_config.py  main.py  main_ui.py  pyproject.toml
data/: config.json
data/sessions/: chat-ae382252-c68a-45a4-aa3c-2493cc729c8b.json  chat-d070bb9f-1cfa-415e-a58a-b9aaa148abbe.json
src/pychat/: __main__.py  chat_app.py  cli.py  data_session.py  web.py
tests/: test_chat_app.py  test_data_config.py  test_data_session.py
